# nheko-krunner

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  NhekoDBusApi.cpp  NhekoDBusInterface.cpp  NhekoKRunnerConfig.cpp  NhekoKRunnerConfig.h  kcm_nheko-krunner.desktop  nheko-krunner.cpp  nheko-krunner.h  plasma-runner-nheko-krunner.desktop
